# veloxsearch

./: Containerfile  Makefile  README.md  config.sample.toml  pyproject.toml
data/: gameofthrones_8k-2018.txt  harrypotter_8k_3column-txt.txt  memory-alpha_8k_2018.txt  starwars_8k_2018.txt
src/velox_search/: config.py  velox.py
src/velox_search/algorithms/: __init__.py  bisect.py  naive.py  prefix_tree.py
src/veloxsearch/: config.py  velox.py
src/veloxsearch/algorithms/: __init__.py  bisect.py  naive.py  prefix_tree.py
tests/: benchmark.py  config.py  http_server.py  utils.py  velox.py  velox_search.py
